add raw support of recursive stepper
- внесены правки в Cmake
- представлено тестовое использование в main.cpp
- Добавлен класс RecurciveStepper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.16)
-project(SecureDevelopment LANGUAGES CXX)
+cmake_minimum_required(VERSION 2.4)
+project(recursive_encoder LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -7,12 +7,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 
-add_executable(SecureDevelopment
+add_subdirectory(recursive_stepper)
+
+add_executable(recursive_encoder
   main.cpp
 )
-target_link_libraries(SecureDevelopment PRIVATE Qt${QT_VERSION_MAJOR}::Core)
 
-install(TARGETS SecureDevelopment
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+target_link_libraries(recursive_encoder
+    PRIVATE
+        Qt${QT_VERSION_MAJOR}::Core
+        recursive_stepper
 )
